@@ -1,3 +1,7 @@
+2015/01/18:
+Incompatible change of the incremental API.
+The incremental API now exposes shift events too.
+
 2015/01/16:
 Fixed a couple bugs in Makefile and src/Makefile which would cause
 compilation and installation to fail with "TARGET=byte". (Reported
